--- a/app/views/fisica/authors.html.erb
+++ b/app/views/fisica/authors.html.erb
@@ -35,7 +35,7 @@
   </ul>
 </div>
 <!-- Almacenar en un base de datos nombre, id, edad, carrera, bio -->
-
+<!--
 <div class="daniel" id="daniel" align="center">
   <h4><%= @users[0].nombre %> <%= @users[0].apellido %> </h4>
   <p>ID: <%= @users[0].matricula %></p><br>
@@ -54,7 +54,7 @@
   <p>Carrera: <%= @users[2].carrera %></p><br>
   <p>Biografia: <%= @users[2].bio %></p>
 </div>
-
+*/
 <script type="text/javascript">
   function showHector() {
       document.getElementById("daniel").style.display = "none";
@@ -72,4 +72,4 @@
       document.getElementById("ronnie").style.display = "block";
       document.getElementById("hector").style.display = "none";
   }
-</script>
+</script> -->
