--- a/app/views/fisica/magnetico.erb
+++ b/app/views/fisica/magnetico.erb
@@ -44,8 +44,8 @@
 
       let layer = new Konva.Layer();
       //Campo magnetico
-      let Bmag = 6.622; //Teslas
-      let Bdir = "cruz"; //Hacia dentro de la pantalla. "punto", hacia fuera de la pantalla.
+      let Bmag = 0.622; //Teslas
+      let Bdir = "punto"; //Hacia dentro de la pantalla. "punto", hacia fuera de la pantalla.
       let Fm = [0, 0]; //Fuerza magnetica
 
 
